[gd_scene load_steps=16 format=3 uid="uid://5xdx8abl1xi1"]

[ext_resource type="Script" path="res://scripts/menus_ui/old_menu.gd" id="1_k8b36"]
[ext_resource type="FontFile" uid="uid://bxro7d3j74u0w" path="res://assets/font/ethnocentric rg it.ttf" id="2_pksmb"]
[ext_resource type="PackedScene" uid="uid://cqst2wt0kvivm" path="res://scenes/menus_ui/credits.tscn" id="3_bhn2o"]
[ext_resource type="PackedScene" uid="uid://bf1ju8luknc17" path="res://scenes/menus_ui/settings.tscn" id="4_h8maw"]
[ext_resource type="AudioStream" uid="uid://fhaou6mjhc3s" path="res://assets/audio/music/MAIN_TITLE - Ether.ogg" id="8_i7hig"]
[ext_resource type="PackedScene" uid="uid://3sl8g3mtc08a" path="res://scenes/menus_ui/audio_manager.tscn" id="9_bhn2o"]
[ext_resource type="AudioStream" uid="uid://ir7wno6dp7vh" path="res://assets/audio/bridge_ambiance.ogg" id="10_hux8j"]
[ext_resource type="Script" uid="uid://dmdedm3kpsdji" path="res://addons/signal_printer/signal_printer.gd" id="10_iqa3n"]

[sub_resource type="LabelSettings" id="LabelSettings_fa2ty"]
font = ExtResource("2_pksmb")
font_size = 50

[sub_resource type="Animation" id="Animation_8j3nr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1d4sy"]
resource_name = "fade_in_long"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5bg51"]
resource_name = "fade_in_short"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vunk4"]
resource_name = "fade_out_long"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_02fua"]
resource_name = "fade_out_short"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eo4tg"]
_data = {
&"RESET": SubResource("Animation_8j3nr"),
&"fade_in_long": SubResource("Animation_1d4sy"),
&"fade_in_short": SubResource("Animation_5bg51"),
&"fade_out_long": SubResource("Animation_vunk4"),
&"fade_out_short": SubResource("Animation_02fua")
}

[node name="3D_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_k8b36")

[node name="Multiplayer_popup" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 80)
layout_mode = 0
offset_left = 239.0
offset_top = 247.0
offset_right = 439.0
offset_bottom = 327.0
mouse_filter = 1
color = Color(0.152941, 0.152941, 0.152941, 0.619608)

[node name="MarginContainer" type="MarginContainer" parent="Multiplayer_popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer_popup/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Multiplayer_popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Enter IP Address:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer_popup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="IPTextEdit" type="LineEdit" parent="Multiplayer_popup/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
placeholder_text = "192.0.0.1:6007"
max_length = 20

[node name="IP_check_button" type="Button" parent="Multiplayer_popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "âœ”"

[node name="TitleScreen" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="TitleScreen/MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="TitleScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer"]
layout_mode = 2

[node name="GameLogo" type="Label" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "FLASHTREK"
label_settings = SubResource("LabelSettings_fa2ty")

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 2

[node name="Username" type="ColorRect" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.152941, 0.152941, 0.152941, 0.619608)

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer/Username"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer/Username/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer/Username/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Name:"
horizontal_alignment = 1

[node name="ship_name_edit" type="LineEdit" parent="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer/Username/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 15
placeholder_text = "USS Enterprise"
max_length = 25

[node name="MainContainer" type="HBoxContainer" parent="TitleScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftSpacer" type="MarginContainer" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="LeftContainer" type="VBoxContainer" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 7

[node name="SPbutton" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer" groups=["UI_button"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../MPcontainer/HostMP")
theme_override_font_sizes/font_size = 13
text = "Single Player"

[node name="MPcontainer" type="HBoxContainer" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer"]
layout_mode = 2

[node name="HostMP" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/MPcontainer" groups=["UI_button"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../JoinMP")
focus_neighbor_bottom = NodePath("../../SettingsButton")
theme_override_font_sizes/font_size = 13
text = "Host MP"

[node name="JoinMP" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/MPcontainer" groups=["UI_button"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../HostMP")
focus_neighbor_bottom = NodePath("../../SettingsButton")
theme_override_font_sizes/font_size = 13
text = "Join MP"

[node name="SettingsButton" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer" groups=["UI_button"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../MPcontainer/HostMP")
focus_neighbor_bottom = NodePath("../CheatsMenu")
theme_override_font_sizes/font_size = 13
text = "Settings"

[node name="CheatsMenu" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer" groups=["UI_button"]]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme_override_font_sizes/font_size = 13
text = "Cheats"

[node name="CreditsButton" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer" groups=["UI_button"]]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../CheatsMenu")
focus_neighbor_bottom = NodePath("../ExitButton")
theme_override_font_sizes/font_size = 13
text = "Credits"

[node name="ExitButton" type="Button" parent="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer" groups=["UI_button"]]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../SPbutton")
theme_override_font_sizes/font_size = 13
text = "Exit Game"

[node name="BottomContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -470.0
offset_top = -22.0
offset_right = 470.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="Copyright" type="Label" parent="BottomContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "Â© n8thegreat 2025"
vertical_alignment = 1

[node name="Version" type="Label" parent="BottomContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 15
text = "V 0.0.08"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Credits" parent="." instance=ExtResource("3_bhn2o")]
unique_name_in_owner = true
visible = false

[node name="Settings" parent="." instance=ExtResource("4_h8maw")]
unique_name_in_owner = true
visible = false

[node name="Transition_layer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2
visible = false

[node name="FadeAnimation" type="ColorRect" parent="Transition_layer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition_layer"]
unique_name_in_owner = true
root_node = NodePath("../FadeAnimation")
libraries = {
&"": SubResource("AnimationLibrary_eo4tg")
}

[node name="MainMenuBackground" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_hux8j")
volume_db = -25.0

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_i7hig")
volume_db = -10.0

[node name="audio_manager" parent="." instance=ExtResource("9_bhn2o")]

[node name="SignalPrinter" type="Node" parent="."]
script = ExtResource("10_iqa3n")
enabled = false

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="focus_entered" from="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer/Username" to="." method="_on_username_focus_entered"]
[connection signal="text_changed" from="TitleScreen/MarginContainer/HBoxContainer/TitleContainer/VBoxContainer/Username/MarginContainer/HBoxContainer/ship_name_edit" to="." method="_on_ship_name_changed"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/SPbutton" to="." method="_on_sp_button_pressed"]
[connection signal="ready" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/SPbutton" to="." method="_on_SP_button_ready"]
[connection signal="focus_entered" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/MPcontainer/HostMP" to="." method="_on_host_focus_entered"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/MPcontainer/HostMP" to="." method="_on_host_mp_pressed"]
[connection signal="focus_entered" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/MPcontainer/JoinMP" to="." method="_on_join_focus_entered"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/MPcontainer/JoinMP" to="." method="_on_join_mp_pressed"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/CheatsMenu" to="." method="_on_cheats_menu_pressed"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="TitleScreen/MarginContainer/HBoxContainer/MainContainer/LeftContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="finished" from="MainMenuBackground" to="." method="_on_main_menu_background_finished"]
[connection signal="finished" from="MainMenuMusic" to="." method="_on_main_menu_music_finished"]
